# rust-lang-book-tutorial

./: README.md
add/: Cargo.toml  notes.txt
adder/src/: lib.rs  lib2.rs  lib3.rs
adder/tests/: integration_test.rs
advanced_functions_and_closures/src/: main.rs
advanced_traits/src/: calling_methods_with_the_same_name.rs  default_generic_type_parameters.rs  generic_trait.rs  main.rs  newtype_pattern.rs  supertraits.rs
advanced_types/src/: dynamically_sized_types.rs  main.rs  never_type.rs
art/src/: lib.rs  main.rs
closures/src/: capturing_env.rs  main.rs
collections/src/: hashmap.rs  main.rs  string.rs
concurrency/src/: main.rs  message_passing.rs  shared_state.rs
declarative_macros/src/: lib.rs  main.rs
enums/src/: main.rs
errors/src/: custom_type.rs  error_propagation.rs  main.rs
generics/src/: main.rs  performance.rs  struct_enum.rs
guessing_game/src/: main.rs
hello_macro/src/: lib.rs
iterators/src/: main.rs  main2.rs
lifetimes/src/: bc.rs  elision.rs  finale.rs  main.rs  structs.rs
minigrep/: output.txt
minigrep/src/: lib.rs  main.rs
minigrep_with_iterators/src/: lib.rs  main.rs
my_crate/: Cargo.toml
my_crate/src/: lib.rs  main.rs
oop/src/: main.rs
ownership/src/: main.rs
patterns_matching/src/: main.rs
patterns_syntax/: Cargo.toml
patterns_syntax/src/: bindings.rs  ignore_values.rs  main.rs  match_guards.rs
procedural_macros/: Cargo.toml
procedural_macros/src/: lib.rs  main.rs
restaurant/src/: lib.rs  (+1 more)
smart_pointers/: notes.txt
state_design_pattern_oop/: Cargo.toml
state_design_pattern_rust/: Cargo.toml
(+28 files in other folders)
