[package]
name = "my_crate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
# Optimization setting, from 0 (no optimization) - 3 (max optimization)
# 0 (dev default) -> Fast compile time, slower runtime
# 3 (release default) -> Vice versa
opt-level = 1

[profile.release]
opt-level = 3